--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    compile 'commons-cli:commons-cli:1.2'
     testCompile 'commons-io:commons-io:2.4'
     testCompile 'org.mockito:mockito-all:1.9.5'
     testCompile 'junit:junit:4.11'
@@ -35,3 +36,8 @@ test {
     include '**/*Test.class'
 }
 
+run {
+    if (project.hasProperty('args')){
+        args project.args.split('\\s+')
+    }
+}
